Release 4.21.3
	- Bug-fix release: switch to xlrd3 library, since xlrd has dropped support for XLSX files
	- be more careful about detecting non-XLSX zip files
	- be more efficient with memory usage for Excel files

2020-12-08 Release 4.21.2
	- Bug-fix release: corrected rare Unicode bug in lookahead buffer for CSV files

2020-08-18 Release 4.21.1
	- Bug-fix release: corrected rare bug in handling HXL Proxy saved recipes as a source

2020-07-22 Release 4.21
	- BACKWARDS-INCOMPATIBLE: rename "whitelist" to "includes" in
	  hxl.model.Dataset.with_columns() and JSON format for loading a
	  ColumnFilter
	- BACKWARDS-INCOMPATIBLE: rename "blacklist" to "excludes" in
	  hxl.model.Dataset.without_columns() and JSON format for loading a
	  ColumnFilter
	- added a new ExpandListsFilter and hxlexpand command-line script
	- added --skip-untagged option to hxlcut script
	- improved docstrings for hxl.io, hxl.datatypes, hxl.converters, and hxl.geo modules
	- added hxlspec command-line script to process a HXL JSON spec
	- added URL munging for HXL Proxy links (non-CSV/JSON)
	- added URL munging for Kobo survey links (requires an Authorization: header)
	- if there's an error parsing a formula, return the value "** ERROR **" and log the error
	- added requests_cache to requirements (to disable caching for API calls)

2020-05-20 Release 4.20
	- switch to jsonpath-ng library to support more JSONPath features
	- add support for row formulas as right side of row queries (making it possible to compare one column to another)
	- add today() function for row formulas (today's UTC date in ISO YYYY-mm-dd format)
	- add support for parsing Unix-style epoch timestamps (nanoseconds, milliseconds, or seconds)
	- add long description in setup.py for PyPi (from README.md)
	- work around xlrd date-handling bug (for malformed Excel dates)
	- more cleanup on docstrings

2020-04-23 Release 4.19
	- allow selector for JSON data to be a JSON path as well as just a simple token