@@ -2,6 +2,7 @@ Release 4.21.3
 	- Bug-fix release: switch to xlrd3 library, since xlrd has dropped support for XLSX files
 	- be more careful about detecting non-XLSX zip files
 	- be more efficient with memory usage for Excel files
+	- unless allow_local is True, block fetching datasets from localhost, *.localdomain, or any dotted quad
 
 2020-12-08 Release 4.21.2
 	- Bug-fix release: corrected rare Unicode bug in lookahead buffer for CSV files
